--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.summer_practice"
+        applicationId "com.example.homework1"
         minSdk 23
         targetSdk 32
         versionCode 1
